--- a/style.css
+++ b/style.css
@@ -276,75 +276,145 @@ button {
   padding: 5px;
 }
 
-@-webkit-keyframes animate {
+@-webkit-keyframes animateblue {
   0% {
-    opacity: 0.3;
+    background: blue;
   }
   10% {
-    opacity: 1.5;
+    background: #5656ff;
   }
   20% {
-    opacity: 0.3;
+    background: blue;
   }
   30% {
-    opacity: 1.5;
+    background: #5656ff;
   }
   40% {
-    opacity: 0.3;
+    background: blue;
   }
   50% {
-    opacity: 1.5;
+    background: #5656ff;
   }
   60% {
-    opacity: 0.3;
+    background: blue;
   }
   70% {
-    opacity: 1.5;
+    background: #5656ff;
   }
   80% {
-    opacity: 0.3;
+    background: blue;
   }
   90% {
-    opacity: 1.5;
+    background: #5656ff;
   }
   100% {
-    opacity: 0.3;
+    background: blue;
   }
 }
 
-@keyframes animate {
+@keyframes animateblue {
   0% {
-    opacity: 0.3;
+    background: blue;
   }
   10% {
-    opacity: 1.5;
+    background: #5656ff;
   }
   20% {
-    opacity: 0.3;
+    background: blue;
   }
   30% {
-    opacity: 1.5;
+    background: #5656ff;
   }
   40% {
-    opacity: 0.3;
+    background: blue;
   }
   50% {
-    opacity: 1.5;
+    background: #5656ff;
   }
   60% {
-    opacity: 0.3;
+    background: blue;
   }
   70% {
-    opacity: 1.5;
+    background: #5656ff;
   }
   80% {
-    opacity: 0.3;
+    background: blue;
   }
   90% {
-    opacity: 1.5;
+    background: #5656ff;
   }
   100% {
-    opacity: 0.3;
+    background: blue;
+  }
+}
+@-webkit-keyframes animatepink {
+  0% {
+    background: pink;
+  }
+  10% {
+    background: #dd909e;
+  }
+  20% {
+    background: pink;
+  }
+  30% {
+    background: #dd909e;
+  }
+  40% {
+    background: pink;
+  }
+  50% {
+    background: #dd909e;
+  }
+  60% {
+    background: pink;
+  }
+  70% {
+    background: #dd909e;
+  }
+  80% {
+    background: pink;
+  }
+  90% {
+    background: #dd909e;
+  }
+  100% {
+    background: pink;
+  }
+}
+@keyframes animatepink {
+  0% {
+    background: pink;
+  }
+  10% {
+    background: #dd909e;
+  }
+  20% {
+    background: pink;
+  }
+  30% {
+    background: #dd909e;
+  }
+  40% {
+    background: pink;
+  }
+  50% {
+    background: #dd909e;
+  }
+  60% {
+    background: pink;
+  }
+  70% {
+    background: #dd909e;
+  }
+  80% {
+    background: pink;
+  }
+  90% {
+    background: #dd909e;
+  }
+  100% {
+    background: pink;
   }
 }
 @-webkit-keyframes animategreen {
@@ -415,5 +485,75 @@ button {
   }
   100% {
     background: lightgreen;
+  }
+}
+@-webkit-keyframes animatered {
+  0% {
+    background: red;
+  }
+  10% {
+    background: #c74444;
+  }
+  20% {
+    background: red;
+  }
+  30% {
+    background: #c74444;
+  }
+  40% {
+    background: red;
+  }
+  50% {
+    background: #c74444;
+  }
+  60% {
+    background: red;
+  }
+  70% {
+    background: #c74444;
+  }
+  80% {
+    background: red;
+  }
+  90% {
+    background: #c74444;
+  }
+  100% {
+    background: red;
+  }
+}
+@keyframes animatered {
+  0% {
+    background: red;
+  }
+  10% {
+    background: #c74444;
+  }
+  20% {
+    background: red;
+  }
+  30% {
+    background: #c74444;
+  }
+  40% {
+    background: red;
+  }
+  50% {
+    background: #c74444;
+  }
+  60% {
+    background: red;
+  }
+  70% {
+    background: #c74444;
+  }
+  80% {
+    background: red;
+  }
+  90% {
+    background: #c74444;
+  }
+  100% {
+    background: red;
   }
 }/*# sourceMappingURL=style.css.map */
